[package]
name = "build-fs-tree"
description = "Generate a filesystem tree from a macro or a YAML tree"
version = "0.4.0"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
edition = "2021"
build = false
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/build-fs-tree"
repository = "https://github.com/KSXGitHub/build-fs-tree.git"
keywords = [
  "file",
  "directory",
  "filesystem",
  "tree",
  "yaml",
]
categories = [
  "command-line-utilities",
  "development-tools",
  "filesystem",
  "rust-patterns",
]
include = [
  "*.rs",
  "/Cargo.toml",
  "/README.md",
  "/LICENSE.md",
]

[lib]
name = "build_fs_tree"
path = "lib.rs"
doc = true

[[bin]]
name = "build-fs-tree"
path = "_cli/build-fs-tree.rs"
required-features = ["cli"]
doc = false

[[bin]]
name = "build-fs-tree-completions"
path = "_cli/build-fs-tree-completions.rs"
required-features = ["cli-completions"]
doc = false

[features]
default = []
cli = ["clap/derive", "clap-utilities"]
cli-completions = ["cli"]

[dependencies]
derive_more = "^0.99.17"
thiserror = "^1.0.37"
pipe-trait = "^0.4.0"
serde_yaml = "^0.9.13"
text-block-macros = "^0.1.1"
clap = { version = "^3.2.22", optional = true }
clap-utilities = { version = "^0.1.0", optional = true }
serde = { version = "^1.0.145", features = ["derive"] }
