[package]
name = "build-fs-tree"
description = "Generate a filesystem tree from a macro or a YAML tree"
version = "0.7.1"
rust-version = "1.80"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
edition = "2021"
build = false
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/build-fs-tree"
repository = "https://github.com/KSXGitHub/build-fs-tree.git"
keywords = [
  "file",
  "directory",
  "filesystem",
  "tree",
  "yaml",
]
categories = [
  "command-line-utilities",
  "development-tools",
  "filesystem",
  "rust-patterns",
]
include = [
  "*.rs",
  "/Cargo.toml",
  "/README.md",
  "/LICENSE.md",
]

[lib]
name = "build_fs_tree"
path = "lib.rs"
doc = true

[[bin]]
name = "build-fs-tree"
path = "_cli/build-fs-tree.rs"
required-features = ["cli"]
doc = false

[[bin]]
name = "build-fs-tree-completions"
path = "_cli/build-fs-tree-completions.rs"
required-features = ["cli-completions"]
doc = false

[features]
default = []
cli = ["clap/derive", "clap-utilities"]
cli-completions = ["cli"]

[dependencies]
clap = { workspace = true, optional = true }
clap-utilities = { workspace = true, optional = true }
derive_more.workspace = true
pipe-trait.workspace = true
serde_yaml.workspace = true
serde.workspace = true
text-block-macros.workspace = true
