[package]
name = "private-test-utils"
version = "0.0.0"
edition = "2021"
build = false

[lib]
name = "private_test_utils"
path = "lib.rs"

[features]
default = []
cli = ["build-fs-tree/cli"]
cli-completions = ["build-fs-tree/cli-completions"]

[dependencies]
pipe-trait = "^0.4.0"
maplit = "^1.0.2"
text-block-macros = "^0.1.1"
serde_yaml = "^0.8.25"
pretty_assertions = "^1.2.1"
derive_more = "^0.99.17"
rand = "^0.8.5"
command-extra = "^1.0.0"

[dependencies.serde]
version = "^1.0.139"
features = ["derive"]

[dependencies.build-fs-tree]
path = "../src"
default-features = false
