[package]
name = "private-test-utils"
version = "0.0.0"
edition = "2021"
build = false

[lib]
name = "private_test_utils"
path = "lib.rs"

[features]
default = []
cli = ["build-fs-tree/cli"]
cli-completions = ["build-fs-tree/cli-completions"]

[dependencies]
build-fs-tree = { path = "../src", default-features = false }

cargo_toml.workspace = true
command-extra.workspace = true
derive_more.workspace = true
maplit.workspace = true
pipe-trait.workspace = true
pretty_assertions.workspace = true
rand.workspace = true
semver.workspace = true
serde_yaml.workspace = true
serde.workspace = true
text-block-macros.workspace = true
